kubernetes/generatedManifests/test/infrastructure/metalb/1-manifest/apps_v1-deployment-metalb-metallb-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"labels":{"app.kubernetes.io/component":"controller","app.kubernetes.io/instance":"metallb","app.kubernetes.io/managed-by":"pulumi","app.kubernetes.io/name":"metallb","helm.sh/chart":"metallb-4.1.5"},"name":"metallb-controller","namespace":"metalb"},"spec":{"replicas":1,"revisionHistoryLimit":3,"selector":{"matchLabels":{"app.kubernetes.io/component":"controller","app.kubernetes.io/instance":"metallb","app.kubernetes.io/name":"metallb [...]
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: metallb
    app.kubernetes.io/managed-by: pulumi
    app.kubernetes.io/name: metallb
    helm.sh/chart: metallb-4.1.5
  name: metallb-controller
  namespace: metalb
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: metallb
      app.kubernetes.io/name: metallb
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: controller
        app.kubernetes.io/instance: metallb
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: metallb
        helm.sh/chart: metallb-4.1.5
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/component: controller
                  app.kubernetes.io/instance: metallb
                  app.kubernetes.io/name: metallb
              namespaces:
              - metalb
              topologyKey: kubernetes.io/hostname
            weight: 1
      containers:
      - args:
        - --port=7472
        - --cert-service-name=metallb-webhook-service
        image: docker.io/bitnami/metallb-controller:0.13.5-debian-11-r12
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /metrics
            port: metrics
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: metallb-controller
        ports:
        - containerPort: 7472
          name: metrics
        - containerPort: 9443
          name: webhook-server
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /metrics
            port: metrics
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits: {}
          requests: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1001
        volumeMounts:
        - mountPath: /tmp/k8s-webhook-server/serving-certs
          name: cert
          readOnly: true
      nodeSelector:
        kubernetes.io/os: linux
      securityContext:
        fsGroup: 1001
      serviceAccountName: metallb-controller
      volumes:
      - name: cert
        secret:
          defaultMode: 420
          secretName: webhook-server-cert
