kubernetes/generatedManifests/test/infrastructure/metalb/1-manifest/rbac.authorization.k8s.io_v1-rolebinding-metalb-metallb-controller.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"rbac.authorization.k8s.io/v1","kind":"RoleBinding","metadata":{"labels":{"app.kubernetes.io/component":"controller","app.kubernetes.io/instance":"metallb","app.kubernetes.io/managed-by":"pulumi","app.kubernetes.io/name":"metallb","helm.sh/chart":"metallb-4.1.5"},"name":"metallb-controller","namespace":"metalb"},"roleRef":{"apiGroup":"rbac.authorization.k8s.io","kind":"Role","name":"metallb-controller"},"subjects":[{"kind":"ServiceAccount","name":"metallb-controller","namespa [...]
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: metallb
    app.kubernetes.io/managed-by: pulumi
    app.kubernetes.io/name: metallb
    helm.sh/chart: metallb-4.1.5
  name: metallb-controller
  namespace: metalb
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: Role
  name: metallb-controller
subjects:
- kind: ServiceAccount
  name: metallb-controller
  namespace: metalb
