kubernetes/generatedManifests/test/infrastructure/metalb/1-manifest/v1-service-metalb-metallb-webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"labels":{"app.kubernetes.io/instance":"metallb","app.kubernetes.io/managed-by":"pulumi","app.kubernetes.io/name":"metallb","helm.sh/chart":"metallb-4.1.5"},"name":"metallb-webhook-service","namespace":"metalb"},"spec":{"ports":[{"port":443,"targetPort":9443}],"selector":{"app.kubernetes.io/component":"controller","app.kubernetes.io/instance":"metallb","app.kubernetes.io/name":"metallb"}}}
  labels:
    app.kubernetes.io/instance: metallb
    app.kubernetes.io/managed-by: pulumi
    app.kubernetes.io/name: metallb
    helm.sh/chart: metallb-4.1.5
  name: metallb-webhook-service
  namespace: metalb
spec:
  ports:
  - port: 443
    targetPort: 9443
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: metallb
    app.kubernetes.io/name: metallb
